k8s/overlays/base/api-node/manifests/movie-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: movie-api-deployment
  labels:
    app: movie-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: movie-api
  template:
    metadata:
      labels:
        app: movie-api
    spec:
      terminationGracePeriodSeconds: 20
      containers:
        - name: movie-api
          image: ghcr.io/twilight4/api-node
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          livenessProbe:
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
            httpGet:
              path: /health
              port: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsUser: 1000
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              cpu: "250m"
              memory: "300Mi"
            limits:
              cpu: "500m"
              memory: "400Mi"
