k8s/overlays/base/api-node/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-api-ingress
spec:
  ingressClassName: gce
  rules:
    - http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: movie-api-service
                port:
                  number: 80
