k8s/overlays/base/api-node/manifests/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: movie-api-netpol
spec:
  podSelector:
    matchLabels:
      app: movie-api
  policyTypes:
    - Egress

  egress:
    # Allow HTTPS egress (required for Firestore, Google APIs)
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 443
